--- a/color-game-react/src/assets/css/game-style.css
+++ b/color-game-react/src/assets/css/game-style.css
@@ -120,13 +120,13 @@ section{
   overflow: hidden;
 }
 
-section:before{
+section::before{
   content: '';
   position: absolute;
-  top: 0;
+  top: 125px;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 50%;
+  height: 300px;
   mix-blend-mode: hue;
   animation: animate 20s linear infinite;
 }
