Adicionando botões de dificuldade no formulário.

--- a/color-game-react/src/assets/css/game-style.css
+++ b/color-game-react/src/assets/css/game-style.css
@@ -178,3 +178,62 @@ section::before{
   }
  
 }
+
+.difficulty-button {
+  font-family: 'Fjalla One', sans-serif;
+  height: 50px;
+  width: 70px;
+  font-size: medium;
+  margin-right: 10px;
+  margin-top: 10px;
+  border: none;
+  outline: none;
+  font-weight: bold;
+  color: #111;
+  background: #fff;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  transition: all 0.25s ease-in-out;
+}
+.difficulty-button:hover {
+  background-color: #155799;
+  border-color: #155799;
+  color: #F1F2F2;
+}
+
+.difficulty-button:focus, .difficulty-button:active:focus {
+  color: #F1F2F2;
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+}
+
+.difficulty-button:before {
+  content: '';
+  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+  position: absolute;
+  top: -2px;
+  left:-2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing 20s linear infinite;
+  opacity: 0;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
+}
+
+.difficulty-button:active {
+  color: #fff
+}
+
+.difficulty-button:active:after {
+  background: transparent;
+}
+
+.difficulty-button:hover:before {
+  opacity: 1;
+}
+
