bug form resolved

--- a/color-game-angular/src/app/Components/player-form.component.css
+++ b/color-game-angular/src/app/Components/player-form.component.css
@@ -1,21 +1,39 @@
-  
+  form {
+    z-index: 1000;
+    position: relative;
+  }
+
  input {
   font-family: 'Fjalla One', sans-serif;
   width: 15%;
   padding: 5px 5px;
-  margin: 5px 5px;
+  margin: 8px 8px;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  
 }
 
 button {
-  width: 30%;
+  width: 18%;
   padding: 5px 5px;
   margin: 5px 5px;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
+  font-family: 'Fjalla One', sans-serif;
+
+  pointer-events: auto;
+  cursor: default;
+}
+
+input.ng-invalid.ng-touched {
+  border-color: red;
+}
+.error {
+  color: red;
+  font-style: italic;
+  font-size: 12px;
 }
