Adicionado estilização do erro e tipo do botão do form.

--- a/color-game-react/src/assets/css/player-form.css
+++ b/color-game-react/src/assets/css/player-form.css
@@ -9,7 +9,6 @@ div .form input {
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box;
 }
 
 input#submit{
@@ -19,65 +18,21 @@ input#submit{
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
-  box-sizing: border-box;
 }
 
-/* .colorful-input {
-  font-family: 'Fjalla One', sans-serif;
-  height: 50px;
-  width: 70px;
-  font-size: medium;
-  margin-right: 10px;
-  margin-top: 10px;
-  border: none;
-  outline: none;
-  font-weight: bold;
-  color: #111;
-  background: #fff;
-  cursor: pointer;
-  position: relative;
-  z-index: 0;
-  border-radius: 10px;
+.form-div{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
-.colorful-input:before {
-  content: '';
-  background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
-  position: absolute;
-  top: -2px;
-  left:-2px;
-  background-size: 400%;
-  z-index: -1;
-  filter: blur(5px);
-  width: calc(100% + 4px);
-  height: calc(100% + 4px);
-  animation: glowing 20s linear infinite;
-  opacity: 0;
-  transition: opacity .3s ease-in-out;
-  border-radius: 10px;
+.error{  
+  color: #a94464;
+  background-color: #f2dede;
+  border: 1 1 #ebccd1; 
+  border-radius: 4px; 
+  font-size: small;
+  width: 15%;
+  align-items: center;
+  margin: 5px 5px;
 }
-
-.colorful-input:active {
-  color: #fff
-}
-
-.colorful-input:active:after {
-  background: transparent;
-}
-
-.colorful-input:hover:before {
-  opacity: 1;
-}
-
-.colorful-input:after {
-  z-index: -1;
-  content: '';
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #fff;
-  left: 0;
-  top: 0;
-  border-radius: 10px;
-} */
 
