--- a/color-game-react/src/assets/css/player-form.css
+++ b/color-game-react/src/assets/css/player-form.css
@@ -22,8 +22,9 @@ input#submit{
 
 .form-div{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 .error{  
   color: #a94464;
